--- a/group_bio_template/styles.css
+++ b/group_bio_template/styles.css
@@ -47,7 +47,16 @@ header nav button:hover {
     flex-wrap: wrap;
     justify-content: space-between;
 }
-
+#pfp {
+    width: 150px;
+    height: auto;
+    border-radius: 8px;
+}
+.mood {
+    font-size: 40px;
+    text-align: center;
+    font-weight: bold;
+}
 /* Card styling for individual team bios */
 .card {
     background: white;
@@ -75,6 +84,10 @@ h2 {
     color: #555;
 }
 
+.pfp {
+    width: 15px;
+    height: 15px;
+}
 /* Button styling */
 button {
     background: #007BFF;
